--- a/src/main/resources/loremipsum/templates/home.mustache
+++ b/src/main/resources/loremipsum/templates/home.mustache
@@ -18,7 +18,7 @@
   <h1><img src="{{base}}/images/logo-base-64.png"/>{{title}}</h1>
 
   {{#paragraphs}}
-      <p>{{text}}</p>
+      <p class="text-justify">{{text}}</p>
   {{/paragraphs}}
 
     </div>
