--- a/src/main/resources/loremipsum/templates/home.mustache
+++ b/src/main/resources/loremipsum/templates/home.mustache
@@ -15,7 +15,7 @@
 <div class="container">
   <div class="jumbotron" style="background-color:{{backgroundColor}};color:{{foregroundColor}}">
 
-      <h1><img src="{{context.base}}/images/logo-base-64.png"/><a href=".">{{context.title}}</a></h1>
+      <h1><img src="{{context.base}}/images/logo-base-64.png"/><a href="{{context.base}}">{{context.title}}</a></h1>
 
     {{#paragraphs}}
         <p class="text-justify">{{.}}</p>
